# advent_of_code_2024

./: pyproject.toml
advent_of_code_2024/day_1/: day_1.py
tests/day_1/: test_day_1.py
